src/objects/Calendar_Row__c.object
<CustomObject>
    <description>Used by the calendar views to represent a row on the events calendars.</description>
    <fields>
        <fullName>Calendar__c</fullName>
        <label>Calendar</label>
        <picklist>
            <picklistValues>
                <fullName>Sales - AMER</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SC - AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC - Global</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>The hex color to use as a background if this is a grouping.</inlineHelpText>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>A lower priority will result in sorting to the top.</inlineHelpText>
        <label>Priority</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Person</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Grouping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Calendar Row</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>